2002-01-31  Sam Steingold  <sds@gnu.org>

	* record.d (mk_weakpointer): new local helper function
	(allocate_weakpointer): new global function, uses mk_weakpointer()
	(MAKE-WEAK-POINTER): use mk_weakpointer()
	* lispbibl.d (allocate_weakpointer): declare as function, not macro
	(weakpointer_broken_p): new macro
	* io.d (pr_orecord): use it

2002-01-30  Sam Steingold  <sds@gnu.org>

	* io.d (pr_orecord): print EQUALP hash tables correctly
	(pr_kvtable): new function, used by pr_orecord()

2002-01-29  Sam Steingold  <sds@gnu.org>

	* hashtabl.d (check_hashtable): new macro
	(GETHASH, PUTHASH, REMHASH, MAPHASH, CLRHASH)
	(HASH-TABLE-REHASH-THRESHOLD, HASH-TABLE-TEST, HASH-TABLE-ITERATOR)
	(CLASS-GETHASH, CLASS-TUPLE-GETHASH): use it

2002-01-29  Stefan Kain  <stefan.kain@freenet.de>

	* hashtabl.d: translated all comments

2002-01-27  Sam Steingold  <sds@gnu.org>

	fixed bug #509073
	* compiler.lisp (expand-compiler-macro): pass to
	COMPILER-MACRO-FUNCTION only function names

2002-01-27  Sam Steingold  <sds@gnu.org>

	code simplifications
	* foreign.d (check_cc_match): new function
	(convert_function_to_foreign, convert_function_from_foreign): use it
	(fehler_eltype_zero_size): new function
	(convert_from_foreign, walk_foreign_pointers): use it

2002-01-27  Sam Steingold  <sds@gnu.org>

	added FFI:FOREIGN-ADDRESS-NULL to check for NULL pointers
	* foreign.d (FOREIGN-ADDRESS-VALUE): new function
	* subr.d, constsym.d (foreign_address_value): added
	* function1.lisp (foreign-address-null): new exported function

2002-01-26  Sam Steingold  <sds@gnu.org>

	* .clisp-full: new file
	* makemake.in: treat .clisp-full just like .clisp

2002-01-24  Sam Steingold  <sds@gnu.org>

	fixed bug #506105: check semi-simple vectors&strings for overflow
	* array.d (fehler_extension): new function
	(VECTOR-PUSH-EXTEND): use it
	(fehler_dim_type): moved before semi-simple vectors&strings
	(make_ssstring, make_ssbvector): check len <= arraysize_limit_1